# pact-workshop-python

./: .gitignore  2026-03-06-pact-workshop-design.md  2026-03-06-pact-workshop.md  EXERCISES.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
product-consumer-service/: Dockerfile  pyproject.toml
product-consumer-service/src/adapters/: product_service_http_adapter.py
product-consumer-service/src/api/: server.py
product-consumer-service/src/application/: create_product_use_case.py  get_product_use_case.py
product-consumer-service/src/domain/: product_not_found_error.py
product-consumer-service/src/ports/: product_service_port.py
product-consumer-service/tests/contract/: test_get_product_pact.py
product-provider-service/: Dockerfile  pyproject.toml
product-provider-service/src/adapters/: in_memory_product_repository.py  sqlite_product_repository.py
product-provider-service/src/api/: dependencies.py  server.py
product-provider-service/src/domain/: product.py
product-provider-service/src/ports/: product_repository_port.py
product-provider-service/tests/provider/: app_runner.py  state_manager.py  test_provider_verification.py
